# coref-commitments

./: GLOSSARY.md  MESSAGES.md  README.md  pyproject.toml
src/coref_commitments/: __init__.py
src/coref_commitments/adapters/: slack.py
src/coref_commitments/data/evals/: commitments_truth.json  mentions_truth.json
src/coref_commitments/data/identity/: canonical_entities.json  canonical_tickets.json
src/coref_commitments/data/mock_sources/: email_messages.json  linear_comments.json  slack_messages.json
src/coref_commitments/evals/: commitments_truth.json
src/coref_commitments/models/: normalized.py
